--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,10 @@ button{
 
 /* footerpart start */
 .footer-icon{
+    display: flex;
     height: 3rem;
     width: 3rem;
+
 }
 
 a{
@@ -166,17 +168,17 @@ margin-bottom: 0.5rem;
 }
 
 footer {
-    color: black;
+    color: rgba(0, 0, 0, 0.682);
     display: flex;
-    margin: auto;
     height: 8rem;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.752);
     color: white;
     width: 60%;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
     border-radius: 1rem;
+    justify-content: space-around;
+    margin: auto;
 }
 
 
