--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body{
     box-sizing: border-box;
     border: solid 2px black;
     background-color: black;
-
 }
 
 .grid-container{
@@ -41,7 +40,7 @@ body{
 
 .button:hover{
 height: 34px;
-box-shadow: 7px 7px 7px 7px rgba(241, 239, 239, 0.811);
+box-shadow: 7px 7px 7px 7px rgba(40, 119, 4, 0.811);
 }
 
 .header-pic{
@@ -150,6 +149,10 @@ a{
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
+}
+
+a:hover{
+    text-shadow: 7px 7px 7px crimson;
 }
 
 address{
